    &#8226; Better handling of refreshing tweets, taking into account the mutes<br/>
    &#8226; Always display the overflow menu on some UI pages<br/>
    &#8226; Changes to the cache and image loading on the timelines<br/>
    &#8226; Slight style changes for UI<br/>
    &#8226; Live streaming of mentions<br/>
    &#8226; Fixed the max tweets to download option for some<br/>
</br><br/>

<b>Version 2.1.6:</b><br/><br/>
    &#8226; More duplication fixes<br/>
    &#8226; Crash fixes<br/>
    &#8226; Translation updates<br/>
</br><br/>

<b>Version 2.1.5:</b><br/><br/>
    &#8226; Fixed black loading screen and duplicates occurring from it<br/>
    &#8226; Toast bar shouldn't get stuck anymore<br/>
    &#8226; Internal browser updates<br/>
    &#8226; Removed echo sound when clicking a tweet from the timeline<br/>
    &#8226; Reply to all screennames from a mention notification<br/>
    &#8226; Fixed adding users to lists<br/>
    &#8226; Some crash fixes<br/>
    &#8226; Translation updates<br/>
</br><br/>

<b>Version 2.1.3:</b><br/><br/>
    &#8226; Bug fixes for the clickable links<br/>
    &#8226; Change the background of the internal browser to match the theme<br/>
    &#8226; In-line previews for any direct image links<br/>
    &#8226; Crash fixes<br/>
</br><br/>

<b>Version 2.1.2:</b><br/><br/>
    &#8226; Fix showing muted mentions<br/>
    &#8226; Fixed pictures not showing correctly if they weren't loaded before opening the tweet<br/>
    &#8226; Crash fixes<br/>
</br><br/>

<b>Version 2.1.1:</b><br/><br/>
    &#8226; Feedback for link clicks<br/>
    &#8226; Better handling of clicks on pictures in a profile<br/>
    &#8226; Crash fixes<br/>
</br><br/>

<b>Version 2.1.0:</b><br/><br/>
    &#8226; Clickable links, mentions, and hashtags on the timeline<br/>
    &#8226; Crash fixes<br/>
    &#8226; Translation updates<br/>
</br><br/>

<b>Version 2.0.9:</b><br/><br/>
    &#8226; Option to show mentions for muted users<br/>